; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/ext2fs/extr_ext2_lookup.c_ext2_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/ext2fs/extr_ext2_lookup.c_ext2_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vop_cachedlookup_args = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2_lookup(%struct.vop_cachedlookup_args* %0) #0 {
  %2 = alloca %struct.vop_cachedlookup_args*, align 8
  store %struct.vop_cachedlookup_args* %0, %struct.vop_cachedlookup_args** %2, align 8
  %3 = load %struct.vop_cachedlookup_args*, %struct.vop_cachedlookup_args** %2, align 8
  %4 = getelementptr inbounds %struct.vop_cachedlookup_args, %struct.vop_cachedlookup_args* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.vop_cachedlookup_args*, %struct.vop_cachedlookup_args** %2, align 8
  %7 = getelementptr inbounds %struct.vop_cachedlookup_args, %struct.vop_cachedlookup_args* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.vop_cachedlookup_args*, %struct.vop_cachedlookup_args** %2, align 8
  %10 = getelementptr inbounds %struct.vop_cachedlookup_args, %struct.vop_cachedlookup_args* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @ext2_lookup_ino(i32 %5, i32 %8, i32 %11, i32* null)
  ret i32 %12
}

declare dso_local i32 @ext2_lookup_ino(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
